# sentence_transformer_app

./: .default_env  .dockerignore  .example_env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  script.py
data/: pages_12345.csv  texts_12345.json
data/model/: tokenizer_config.json
data/models/custom_model/: data_config.json  special_tokens_map.json  tokenizer.json  train_script.py
src/: data_loader.py  predict.py  settings.py
tests/: test_data_loader.py  test_predict.py  test_settings.py
